# smart-building-energy-mlops

./: .gitignore  .streamlit.yml  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  EVALUATION_COMPLETE.md  README.md  STREAMLIT_CLOUD_FIX.md  app.py  install_dependencies.py  package-lock.json  pyproject.toml  requirements.txt  requirements_full.txt  requirements_streamlit.txt  setup.py  streamlit_requirements.txt  verify_dependencies.py
.streamlit/: config.toml
backend/: .gitignore  CONFIG.md  INTEGRATION.md  README.md  requirements.txt  run.py  test.py
backend/app/: __init__.py  insights.py  main.py  predict.py  schemas.py  stats.py
docs/: EVALUATION_GUIDE.md  EVALUATION_QUICK_REFERENCE.md  EVALUATION_VISUAL_GUIDE.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/impact/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/predict/: page.tsx
frontend/components/: EarthScene.tsx  HeroEarth.tsx
models/: feature_names.json  ridge_model.pkl
notebooks/: 01_eda.ipynb
src/features/: build_features.py
src/models/: evaluate.py  train.py
