[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-building-energy-mlops"
version = "1.0.0"
description = "Smart Building Energy Consumption Prediction with MLOps Pipeline"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ML Pipeline", email = "mlops@smartbuilding.dev"}
]

dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.7.0",
    "joblib>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/kartikya2522/smart-building-energy-mlops"
Repository = "https://github.com/kartikya2522/smart-building-energy-mlops.git"
Documentation = "https://github.com/kartikya2522/smart-building-energy-mlops"
